--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/webpack/bin/webpack.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.10.3",
     "webpack-cli": "^4.2.0"
   },
