--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/webpack/bin/webpack.js"
+    "build_posts": "./node_modules/gulp/bin/gulp.js markdown && sleep 2 && ./node_modules/gulp/bin/gulp.js combine && sleep 2",
+    "build": "npm run build_posts && ./node_modules/webpack/bin/webpack.js",
+    "dev": "npm run build_posts && ./node_modules/webpack/bin/webpack.js --watch"
   },
   "repository": {
     "type": "git",
@@ -25,11 +27,15 @@
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "gulp-json-concat": "^0.2.0",
+    "gulp-markdown-to-json": "^1.1.0",
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.10.3",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "gulp": "^4.0.2",
+    "marked": "^1.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
