--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build_posts": "./node_modules/gulp/bin/gulp.js markdown && sleep 2 && ./node_modules/gulp/bin/gulp.js combine && sleep 2",
     "build": "npm run build_posts && ./node_modules/webpack/bin/webpack.js",
-    "dev": "npm run build_posts && ./node_modules/webpack/bin/webpack.js --watch"
+    "dev": "npm run build_posts && ./node_modules/webpack/bin/webpack.js --mode=development --watch",
+    "start": "npm run build_posts && ./node_modules/webpack/bin/webpack.js --mode=development serve --open"
   },
   "repository": {
     "type": "git",
@@ -35,12 +36,14 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "gulp": "^4.0.2",
     "marked": "^1.2.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
