--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build_posts": "./node_modules/gulp/bin/gulp.js markdown && sleep 2 && ./node_modules/gulp/bin/gulp.js combine && sleep 2",
     "build": "npm run build_posts && ./node_modules/webpack/bin/webpack.js",
     "dev": "npm run build_posts && ./node_modules/webpack/bin/webpack.js --mode=development --watch",
-    "start": "npm run build && ./node_modules/webpack/bin/webpack.js --mode=development serve --open"
+    "start": "npm run build && ./node_modules/webpack/bin/webpack.js --mode=development serve --open",
+    "lint": "./node_modules/.bin/eslint \"./src/components/**\""
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gulp-json-concat": "^0.2.0",
     "gulp-markdown-to-json": "^1.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.3.2",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
@@ -43,6 +53,7 @@
     "@primer/octicons-react": "^14.2.2",
     "gulp": "^4.0.2",
     "marked": "^1.2.7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
